# HID-Cpp-code-testing-1

./: .gitignore  CMakeLists.txt  README.md  RUN_GUIDE.txt
docs/: ARCHITECTURE.md
ml/: train_hid_onnx.py
models/: hid_stage2_model.meta.json  hid_stage2_model.onnx  hid_stage2_model.sha256
src/app/: main.cpp
src/common/: lock_free_queue.h  types.h
src/core/: orchestrator.cpp  orchestrator.h
src/platform/: etw_provider.cpp  etw_provider.h  hid_monitor.cpp  hid_monitor.h  usb_device_detector.cpp  usb_device_detector.h
src/security/: behavioral_analyzer.cpp  behavioral_analyzer.h  device_fingerprint_engine.cpp  device_fingerprint_engine.h  model_integrity.cpp  model_integrity.h  onnx_pipeline.cpp  onnx_pipeline.h  policy_engine.cpp  policy_engine.h  remediation_engine.cpp  remediation_engine.h  threat_classifier.cpp  threat_classifier.h
